# aegis-finance

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  GEMINI.md  LICENSE  Makefile  README.md  aegis-finance-architecture.md  config.yaml  docker-compose.yml  pyproject.toml  pytest_out.txt
.github/workflows/: ci.yml
.opencode/plans/: plan.md
data/: category_rules.yaml
data/knowledge/: taxonomy.yaml
data/sources/: argentina.yaml  books.yaml  global.yaml
notebooks/: 01_phase1_showcase.ipynb  phase_2_real_data_test.ipynb
project-specs/: aegis-finance-ddl.md  aegis-finance-setup.md
project-tasks/: aegis-finance-tasklist.md  progress.txt
sql/: 001_schema.sql  002_views.sql  003_seed_synthetic.sql
src/aegis/: __init__.py  config.py
src/aegis/common/: cloud_llm.py  http_client.py
src/aegis/db/: __init__.py  connection.py
src/aegis/graph/: __init__.py  general_flow.py  hybrid_flow.py  privacy.py  rag_flow.py  research_flow.py  router.py  sql_flow.py  staleness.py
src/aegis/kb/: __init__.py  chunker.py  cli.py  embedder.py  extractor.py  fibo_mapping.py  metadata.py  ontology.py  pipeline.py  storage.py  tagger.py  temporal.py
src/aegis/kb/ingestion/: models.py  normalizer.py  registry.py  runner.py  state.py
src/aegis/kb/ingestion/connectors/: base.py  http_polling.py  reddit.py  rest_api.py  rss_feed.py  video.py
src/aegis/kb/ingestion/extractors/: base.py  html_extractor.py  llm_summarizer.py  pdf_extractor.py  timeseries_extractor.py
src/aegis/kb/scrapers/: base.py  blog.py  book_summarizer.py  models.py  reddit.py  regulation.py  youtube.py
src/aegis/parsers/: __init__.py  bank_csv.py  base.py  categorizer.py  credit_card.py  dataframe.py  icbc.py  mercadopago.py  pipeline.py  utils.py
src/aegis/privacy/: redaction_map.py  regex_scrubber.py  risk_scorer.py  semantic_scrubber.py
src/aegis/rag/: retriever.py
src/aegis/tools/: browser.py  search.py
tests/: conftest.py
tests/benchmarks/: kb_quality.json  rag_benchmark.py  sql_benchmark.py  test_kb_population.py
tests/benchmarks/data/: sql_golden.json
tests/benchmarks/results/: kb_baseline.json  sql_results.json
tests/fixtures/: sample_bank.csv
tests/integration/: test_db.py  test_graph_integration.py  test_import_pipeline.py  test_storage.py
tests/unit/: test_categorizer.py  test_chunker.py  test_config.py  test_credit_card.py  test_dataframe.py  test_embedder.py  test_extractor.py  test_fibo_mapping.py  test_graph.py  test_hybrid_rag.py  test_icbc.py  test_ingestion.py  test_mercadopago.py  test_ontology.py  test_parser.py  test_pipeline.py  test_privacy.py  test_research_tools.py  test_router.py  test_scrapers.py  test_slm_categorizer.py  test_sql_flow.py  test_staleness.py  test_storage.py  test_tagger.py  test_temporal.py
