[project]
name = "aegis-finance"
version = "0.1.0"
description = "Privacy-first personal finance advisor powered by hybrid local/cloud LLM architecture."
authors = [
    {name = "olveirap"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pydantic (>=2.0,<3.0)",
    "pyyaml (>=6.0,<7.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "trafilatura (>=2.0.0,<3.0.0)",
    "asyncpraw (>=7.8.1,<8.0.0)",
    "youtube-transcript-api (>=1.2.4,<2.0.0)",
    "pypdf (>=6.7.5,<7.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "langdetect (>=1.0.9)",
    "tiktoken (>=0.9.0)",
    "spacy (>=3.8.0)",
    "scikit-learn (>=1.6.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "tqdm (>=4.67.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
ruff = "^0.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88
