[project]
name = "aegis-finance"
version = "0.1.0"
description = "Privacy-first personal finance advisor powered by hybrid local/cloud LLM architecture."
authors = [
    {name = "olveirap"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "httpx>=0.28.1,<0.29.0",
    "beautifulsoup4>=4.14.3,<5.0.0",
    "trafilatura>=2.0.0,<3.0.0",
    "praw>=7.7.1,<8.0.0",
    "youtube-transcript-api>=1.2.4,<2.0.0",
    "pypdf>=6.7.5,<7.0.0",
    "tenacity>=9.1.4,<10.0.0",
    "langdetect>=1.0.9",
    "tiktoken>=0.9.0",
    "spacy>=3.8.0",
    "scikit-learn>=1.6.0",
    "psycopg[binary]>=3.3.3,<4.0.0",
    "psycopg-pool>=3.2,<4.0",
    "tqdm>=4.67.3,<5.0.0",
    "feedparser>=6.0.12,<7.0.0",
    "openai>=1.0,<2.0",
    "crawl4ai>=0.4.0",
    "unstructured[all-docs]>=0.16.0",
    "unstructured-inference>=0.8.0",
    "pdfminer.six>=20240706",
    "langgraph>=0.2.0,<0.3.0",
    "pandas (>=3.0.1,<4.0.0)",
    "pdfplumber (>=0.10,<1.0)",
    "presidio-analyzer (>=2.2.362,<3.0.0)",
    "presidio-anonymizer (>=2.2.362,<3.0.0)",
    "duckduckgo-search (>=8.1.1,<9.0.0)",
    "sqlglot (>=30.0.3,<31.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "aegis", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
ruff = "^0.9"
faker = "^37.0"
numpy = "^2.0"
pre-commit = "^4.5.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not integration'"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: tests that require external services or provisioned infrastructure",
]

[tool.ruff]
target-version = "py311"
line-length = 88
